hphp/hack/test/typecheck/shape_idx_generic1.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function test<T as shape('x' => ?int, ...)>(T $s): int {
  return Shapes::idx($s, 'x', 0);
}
